objects/WEBXAccount__c.object
<CustomObject>
    <description>WEBXAccount created by Admin user</description>
    <fields>
        <fullName>Default__c</fullName>
        <description>For multiple logins for the same SalesForce.com user, a value of ‘1’ means that this login is the default.</description>
        <label>Default</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Password to logon to SalesCenter.  It is encrypted so don’t bother to modify it.</description>
        <label>Password</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siteurl__c</fullName>
        <description>SalesCenter site.</description>
        <label>Site Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UID__c</fullName>
        <description>The Salesforce.com user id.</description>
        <label>UID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webexid__c</fullName>
        <description>The WebExID needed to logon to SalesCenter.</description>
        <label>WebExID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>WebEx Account</label>
    <listViews>
        <fullName>Trainers</fullName>
        <filterScope>Queue</filterScope>
        <label>Trainers</label>
        <queue>DONOTUSETrainers</queue>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WebEx Account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>